fixed the layout of NyeLiveStream section, such as sizing of elements, and fixed the uneven News card sizing in the News section (HTML & CSS both updated)

--- a/Project 1 /global-styles.css
+++ b/Project 1 /global-styles.css
@@ -10,7 +10,9 @@ body {
   align-items: center;
   background-color: #333;
   padding: 1rem 2rem;
+  width: 100%;
   color: white;
+  box-sizing: border-box;
 }
 
 .nav-links {
